<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:src="@drawable/theband" />

        <TextView
            style="@style/TitleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:fontFamily="@font/graduate"
            android:text="@string/smashing_pumpkins" />

        <ImageView
            android:layout_width="175dp"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:background="#B0BEC5" />

        <TextView
            style="@style/CategoryText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/billy_corgan"
            android:textAllCaps="true" />

        <ImageView
            android:layout_width="175dp"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:background="#B0BEC5" />

        <TextView
            style="@style/bandNotes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:text="@string/billy_notes" />

        <TextView
            style="@style/CategoryText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/jimmy_chamberlin"
            android:textAllCaps="true" />

        <ImageView
            android:layout_width="175dp"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:background="#B0BEC5" />

        <TextView
            style="@style/bandNotes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:text="@string/jimmy_notes" />

        <TextView
            style="@style/CategoryText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/james_iha"
            android:textAllCaps="true" />

        <ImageView
            android:layout_width="175dp"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:background="#B0BEC5" />

        <TextView
            style="@style/bandNotes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:text="@string/james_notes" />


        <TextView
            android:id="@+id/darcy_text_view"
            style="@style/CategoryText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/darcy_wretzky"
            android:textAllCaps="true" />

        <ImageView
            android:layout_width="175dp"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:background="#B0BEC5" />

        <TextView
            style="@style/bandNotes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:text="@string/darcy_notes" />


    </LinearLayout>

</ScrollView>